@@ -9,6 +9,7 @@ sunuo (0.3.2) unstable; urgency=low
   * explicit TileData initialization
   * added Config.Network
     - configure Listeners
+  * Listener.Slice() returns null when idle
   * added legacy scripts
     - use log4net for logging
     - removed Address from ServerList
